<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY authorName "Patryk K.">
    ]>

<resources>
    <string name="app_name">AstroCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="action_home">Main</string>
    <string name="author">Author: &authorName;</string>
    <string name="projectDescription">Academical project</string>
    <string name="contact">Contact on Github: patrykxk</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="locationSettings">Location</string>
    <string name="city">City</string>
    <string name="frequencySettings">Refreshing frequency</string>
    <string name="time">Minutes</string>
    <string name="apply">Apply Settings</string>
    <string name="azimuth">Azimuth</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset</string>
    <string name="Dusk">Dusk</string>
    <string name="dawn">Dawn</string>
    <string name="moonrise">Moonrise</string>
    <string name="moonset">Moonset</string>
    <string name="newMoon">New moon</string>
    <string name="moonPhase">Moon phase</string>
    <string name="synodicDay">Day of synodic month</string>
    <string name="fullMoon">Full moon</string>
    <string name="sun">Sun</string>
    <string name="moon">Moon</string>
    <string name="change_city">Change city</string>
    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">e355a0eb9dd784bd22af704c34053e6a</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="Units">Units</string>
    <string name="Cities">Your cities</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>
