<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/latitudeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView
        android:id="@+id/longitudeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/moonrise"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/moonriseTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Time: " />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/moonset"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/moonsetTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Time: " />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/newMoon"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/newMoonTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Time: " />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/fullMoon"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fullMoon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Time: " />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/moonPhase"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/moonPhase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Time: " />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/synodicDay"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/synodicDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Time: " />
</LinearLayout>