<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/latitudeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView
        android:id="@+id/longitudeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sunrise"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sunriseTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Time: " />

    <TextView
        android:id="@+id/sunriseAzimuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Azimuth" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sunset"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sunsetTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Time: " />

    <TextView
        android:id="@+id/sunsetAzimuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Azimuth" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Dusk"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/duskTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Time: " />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dawn"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dawnTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Time: " />
</LinearLayout>